@@ -13,9 +13,6 @@
 
 * If we see `foo.o' in LIBOBJS, and we've seen AC_OBJEXT, then complain.
 
-* subdir warning for source files is bogus.  I removed it at Cygnus;
-  probably should remove it from net release
-
 * using "include" inside a conditional doesn't currently
   work properly.
 
