@@ -1,0 +1,15 @@
+#! /bin/sh
+
+# Make sure `..' invalid in subdir .o's.
+
+. $srcdir/defs || exit 1
+
+echo 'AC_SUBST(GCJ)' >> configure.in
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = convert
+convert_SOURCES = x/../convert.java
+END
+
+$AUTOMAKE && exit 1
+exit 0
