@@ -1,3 +1,8 @@
+1999-04-10  Tom Tromey  <tromey@cygnus.com>
+
+	* gcj2.test: New file.
+	* Makefile.am (TESTS): Added gcj2.test.
+
 1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* suffix.test: New file.
