@@ -1,5 +1,9 @@
 1999-04-10  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_single_transform_list): Handle dependency
+	tracking when files are created in subdirs.  Error if object in
+	subdir has `..' component.
+
 	* automake.in (initialize_global_constants): Use $(TAR), not tar.
 
 	* automake.in (handle_ltlibraries): Allow check_LTLIBRARIES.
